examples/test/testpolicy5376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5376
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key7: value17
      key23: value26
      key11: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value42
          key9: value37
      podSelector:
        matchLabels:
          key29: value13
